--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <title>Accessibility </title>
 <meta name="description" content="Accessibility checklist minisite.">
 <link rel="stylesheet" href="main.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>       
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>       
 <script type="text/javascript" src="jquery.js"></script>      
-<link href='http://fonts.googleapis.com/css?family=Lato:400,300italic,400italic,700' rel='stylesheet' type='text/css'>   
-<link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Lato:400,300italic,400italic,700' rel='stylesheet' type='text/css'>   
+<link href='//fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 </head>
     
 <body>      
